[package]
name = "airdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
actix-web.workspace = true
config.workspace= true
serde.workspace = true
serde_json.workspace= true
marketplace.workspace= true
log.workspace = true
env_logger.workspace = true

rusqlite = { version = "0.28", features = ["bundled"] }
email_address = "0.2.4"
actix-cors = "0.6.4"

anchor-client = "0.26"
spl-token = "3.5"
solana-sdk = "1.15"
spl-associated-token-account = "1.1"
solana-client = "1.15"
solana-account-decoder = "1.15"
