[package]
name = "mu-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/muprotocol/mu"
description = "Mu CLI"
default-run = "mu"

[features]
admin = []
dev-env = ["mu-runtime", "mu-gateway", "mu-db", "db-embedded-tikv",
		"mu-storage", "storage-embedded-juicefs"]

[[bin]]
name = "mu"
path = "src/bin/mu.rs"
doc = false

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
base64.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
rust-embed.workspace = true
rand.workspace = true
tokio.workspace = true
tokio-util.workspace = true
ctrlc.workspace = true
byte-unit.workspace = true
reqwest.workspace = true
log.workspace = true
env_logger.workspace = true
itertools.workspace = true
uuid.workspace = true
pwr-rs.workspace = true

clap = { version = "4.1", features = ["derive"] }
shellexpand = "3"
dirs = "4"
uriparse = "0.6"
beau_collector = "0.2"

mu_stack.workspace = true
mu-common.workspace = true
musdk-common.workspace = true
mu-runtime = { workspace = true, optional = true }
mu-gateway = { workspace = true, optional = true }
mu-db = { workspace = true, optional = true }
api_common = { workspace = true, features = ["client"] }
db-embedded-tikv = { workspace = true, optional = true }
mu-storage = { workspace = true, optional = true }
storage-embedded-juicefs = { workspace = true, optional = true }
