[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
futures.workspace = true
pin-project.workspace = true
rand.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
config.workspace = true
async-trait.workspace = true
bytes.workspace = true
dyn-clone.workspace = true
dyn-clonable.workspace = true
reqwest.workspace = true
itertools.workspace = true
base64.workspace = true
base58.workspace = true
chrono.workspace = true
byte-unit.workspace = true
protobuf.workspace = true
actix-web.workspace = true
ed25519-dalek.workspace = true
bincode.workspace = true
borsh.workspace = true
pwr-rs.workspace = true

sled = "0.34"
assert_matches = "1.5"
quinn = "0.8"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rcgen = "0.9"
ctrlc = "3.2"
stable-hash = "0.4"
http = "0.2"
validator = { version = "0.16", features = ["derive"] }
num = "0.4"
dns-lookup = "1.0"

musdk-common.workspace = true
mu-common.workspace = true
mu-runtime.workspace = true
mu-gateway.workspace = true
mu-db.workspace = true
mu-storage.workspace = true
mu_stack.workspace = true
marketplace.workspace = true
mailbox_processor.workspace = true
api_common.workspace = true

[dev-dependencies]
test-log = "0.2"

[build-dependencies]
protobuf-codegen = "3.2"
protoc-bin-vendored = "3.0"

[lib]
name = "mu"

[[bin]]
path = "src/main.rs"
name = "mu-executor"
