[package]
name = "faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
byteorder = "1.4"
clap = "2.33"
crossbeam-channel = "0.5"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
solana-clap-utils = "1.15"
solana-cli-config = "1.15"
solana-logger = "1.15"
solana-metrics = "1.15"
solana-sdk = "1.15"
solana-version = "1.15"
spl-memo = { version = "3.0", features = ["no-entrypoint"] }
spl-token = "3.5"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "solana_faucet"

[[bin]]
name = "solana-faucet"
path = "src/bin/faucet.rs"
