[package]
name = "mu_stack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bytes = "1.2"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
protobuf = "3.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
uuid = { version = "1.1", features = ["serde"] }

[build-dependencies]
protobuf-codegen = "3.2"
protoc-bin-vendored = "3.0"

[lib]
name = "mu_stack"

[[bin]]
path = "src/main.rs"
name = "mu_stack_cli"
