[package]
name = "api_common"
version = "0.1.0"
edition = "2021"

[dependencies]
mu_stack = { path = "../mu_stack" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
solana-sdk = "1.15"
anyhow = "1.0"
base64 = "0.21"
log = "0.4"
ed25519-dalek = "1.0"
uuid = { version = "1.3.0", features = ["v4"] }

[features]
default = ["client"]
client = []
