[package]
name = "api_common"
version = "0.1.0"
edition = "2021"

[dependencies]
mu_stack.workspace = true

serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
anyhow.workspace = true
base64.workspace = true
log.workspace = true
bytes.workspace = true
sha256.workspace = true
thiserror.workspace = true
uriparse.workspace = true
pwr-rs.workspace = true

[features]
default = ["client"]
client = []
