[package]
name = "mu-common"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
hostname-validator = "1.1.1"
http = "0.2"
log = { version = "0.4", features = [
    "serde",
    "release_max_level_debug",
    "max_level_trace",
] }

[lib]
name = "mu_common"
