[package]
name = "mu-db"
version = "0.1.0"
edition = "2021"

[lib]
name = "mu_db"

[dependencies]
db-embedded-tikv = { path = "../db-embedded-tikv" }
anyhow = "1.0"
thiserror = "1.0"
tikv-client = "0.1"
async-trait = "0.1"
dyn-clone = "1.0"
dyn-clonable = "0.9"
mailbox_processor = { path = "../mailbox_processor" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1" }
nix = "0.26"
log = "0.4"
bytes = "1.2"
mu_stack = { path = "../mu_stack" }

[build-dependencies]
dirs = "4"

[dev-dependencies]
env_logger = "0.10"
serial_test = "0.8"
assert_matches = "1.5"
futures = "0.3"
rand = "0.8"
