[package]
name = "mu-gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "mu_gateway"

[dependencies]
actix-web = "4.2"
tokio = "1"
anyhow = "1.0"
log = "0.4"
async-trait = "0.1"
mailbox_processor = { path = "../mailbox_processor" }
dyn-clone = "1.0"
dyn-clonable = "0.9"
mu_stack = { path = "../mu_stack" }
musdk-common = { path = "../../sdk/common" }
serde = { version = "1", features = ["derive"] }
