[package]
name = "mu_stack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
base58.workspace = true
base64.workspace = true
bytes.workspace = true
log.workspace = true
protobuf.workspace = true
serde.workspace = true
serde_yaml.workspace = true
byte-unit.workspace = true
uuid.workspace = true
pwr-rs.workspace = true
clap = { version = "4.0", features = ["derive"] }
borsh.workspace = true

[build-dependencies]
protobuf-codegen = "3.2"
protoc-bin-vendored = "3.0"

[lib]
name = "mu_stack"

[[bin]]
path = "src/main.rs"
name = "mu_stack_cli"
