[package]
name = "mu-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "mu_runtime"

[dependencies]
wasmer = { version = "3.1", features = ["wasmer-compiler-llvm"] }
wasmer-wasi = "3.1"
wasmer-middlewares = "3.1"
wasmer-cache = "3.1"
wasmer-compiler-llvm = "3.1"
tokio = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
async-trait = "0.1"
bytes = "1.2"
mailbox_processor = { path = "../mailbox_processor" }
dyn-clone = "1.0"
dyn-clonable = "0.9"
mu_stack = { path = "../mu_stack" }
mu-common = { path = "../common" }
musdk-common = { path = "../../sdk/common" }
byte-unit = { version = "4.0", default-features = false, features = ["serde"] }
