[package]
name = "mu-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
futures.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
async-trait.workspace = true
bytes.workspace = true
dyn-clone.workspace = true
dyn-clonable.workspace = true
byte-unit.workspace = true
reqwest.workspace = true
mailbox_processor.workspace = true
mu_stack.workspace = true
mu-common.workspace = true
mu-db.workspace = true
mu-storage.workspace = true
musdk-common.workspace = true
storage-embedded-juicefs.workspace = true

wasmer = { version = "4.2", default-features = false, features = [
    "sys",
    "cranelift",
] }
wasmer-wasix = "0.18"
wasmer-middlewares = "4.2"
wasmer-compiler-cranelift = "4.2"
wasmer-cache = "4.2"

[dev-dependencies]
test-context.workspace = true
serde_json.workspace = true
itertools.workspace = true
rand.workspace = true
db-embedded-tikv.workspace = true
tikv-client.workspace = true
env_logger.workspace = true
serial_test.workspace = true
