[package]
name = "mu-storage"
version = "0.1.0"
edition = "2021"

[lib]
name = "mu_storage"

[dependencies]
rust-s3 = "0.32.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
dyn-clone = "1.0"
dyn-clonable = "0.9"
mailbox_processor = { path = "../mailbox_processor" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
storage_embedded_juicefs = { path = "../storage_embedded_juicefs"}

