[package]
name = "mu-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
dyn-clone.workspace = true
dyn-clonable.workspace = true
serde.workspace = true
tokio.workspace = true

rust-s3 = "0.32.3"
pin-project-lite = "0.2"
solana-program = { version = "1.15"}

mailbox_processor.workspace = true
mu_stack.workspace = true
storage-embedded-juicefs.workspace = true
tailcall = "0.1.6"
log.workspace = true

[dev-dependencies]
mu-common.workspace = true
