[package]
name = "storage_embedded_juicefs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mailbox_processor = { path = "../mailbox_processor" }
mu-common = { path = "../common" }
tokio = { version = "1", features = ["fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
dyn-clone = "1.0"
dyn-clonable = "0.9"
nix = "0.26"
rust-embed = { version = "6", default-features = false }
log = "0.4"
rand = "0.8"
base64 = "0.21"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0.25"
tar = "0.4.38"
anyhow = "1.0"
