[package]
name = "musdk-common"
version = "0.1.0"
edition = "2021"
authors = ["mu Protocol Team <info@030labs.org>"]
license = "MIT"
description = "Common types for mu Protocol app development SDK"
repository = "https://github.com/muprotocol/mu"

[dependencies]
borsh = "0.10"
num-derive = "0.3"
num-traits = "0.2"

[lib]
name = "musdk_common"
