[package]
name = "musdk-derive"
version = "0.1.0"
edition = "2021"
authors = ["mu Protocol Team <info@030labs.org>"]
license = "MIT"
description = "Derive macros for mu Protocol app development SDK"
repository = "https://github.com/muprotocol/mu"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "fold"] }
quote = "1"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
