[package]
name = "musdk"
version = "0.1.0"
edition = "2021"

[features]
default = ["json", "http"]
json = ["serde", "serde_json"]
http = ["serde_urlencoded"]


[dependencies]
musdk-common = { path = "../common" }
musdk-derive = { path = "../derive" }

thiserror = "1.0"
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
