[package]
name = "musdk"
version = "0.1.0"
edition = "2021"
authors = ["mu Protocol Team <info@030labs.org>"]
license = "MIT"
description = "mu Protocol app development SDK"
repository = "https://github.com/muprotocol/mu"

[features]
default = ["json", "http"]
json = ["serde", "serde_json"]
http = ["serde_urlencoded"]


[dependencies]
musdk-common = "0.1"
musdk-derive = "0.1"

thiserror = "1.0"
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
